@@ -3,9 +3,29 @@
         meta_type="Plone Control Panel Tool"
         xmlns:i18n="http://namespaces.zope.org/i18n"
         i18n:domain="plone">
- <configlet title="Personal Preferences" action_id="fsdMemberPrefs" appId="Plone"
-    category="Member" condition_expr="" i18n:attributes="title"
-    url_expr="python:portal.facultystaffdirectory_tool.fsdMemberProfile()" visible="True">
-  <permission>Set own properties</permission>
+
+ <configlet title="Personal Preferences"
+            action_id="fsdMemberPrefs"
+            appId="Plone"
+            category="Member"
+            condition_expr=""
+            i18n:attributes="title"
+            url_expr="python:portal.facultystaffdirectory_tool.fsdMemberProfile()" 
+            visible="True">
+    <permission>Set own properties</permission>
  </configlet>
+ 
+ <configlet title="Faculty/Staff Directory"
+            category="Products"
+            action_id="FacultyStaffDirectory"
+            appId="FacultyStaffDirectory"
+            condition_expr=""
+            i18n:attributes="title"
+            url_expr="string:${portal_url}/facultystaffdirectory_tool/"
+            visible="True"
+            icon_expr="string:$portal_url/group.png"
+            >
+    <permission>Manage portal</permission>
+ </configlet>
+
 </object>
